# tartarfs

./: Cargo.toml  README.md  files.tar
src/: cli.rs  inode.rs  lib.rs  main.rs  tartarfs.rs  test_utils.rs
src/tartarfs/: item.rs  mod.rs
src/tartarfs/operations/: access.rs  getattr.rs  lookup.rs  mod.rs  read.rs  readdir.rs
