[package]
name = "tartarfs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
fuser = "0.15"
libc = "0.2"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }

[dev-dependencies]
tempfile = "3.17"
walkdir = "2.5"
